fix:修改数据存储逻辑
